--- a/index.html
+++ b/index.html
@@ -1,26 +1,79 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>WalzShop - Top Up Game</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Walz Shop - Top Up Games Murah & Cepat</title>
   <link rel="stylesheet" href="style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
-  <header class="navbar">
-    <h1 class="logo">WalzShop</h1>
-    <nav>
-      <a href="cart.html" class="cart-link">🛒 Keranjang</a>
-    </nav>
+  <!-- HEADER -->
+  <header class="header">
+    <div class="container">
+      <a href="index.html" class="logo">
+        <i class="fas fa-gem logo-icon"></i>
+        <span class="logo-text">Walz Shop</span>
+      </a>
+      <nav class="nav">
+        <a href="index.html"><i class="fas fa-home"></i> Beranda</a>
+        <a href="#"><i class="fas fa-info-circle"></i> Tentang</a>
+        <a href="#"><i class="fas fa-headset"></i> Kontak</a>
+      </nav>
+    </div>
   </header>
 
-  <main class="container">
-    <h2 class="section-title">Pilih Game</h2>
-    <div id="games-grid" class="grid"></div>
+  <!-- MAIN -->
+  <main class="main">
+    <div class="container">
+      <!-- PROMO SLIDER -->
+      <section class="promo-section">
+        <div class="slider" id="promo-slider-container">
+          <div class="slider__track" id="promo-slider">
+            <div class="slider__item skeleton skeleton-card"></div>
+            <div class="slider__item skeleton skeleton-card"></div>
+            <div class="slider__item skeleton skeleton-card"></div>
+          </div>
+          <div class="slider__dots" id="slider-dots"></div>
+        </div>
+      </section>
+
+      <!-- GAME GRID -->
+      <section class="games-section">
+        <h2 class="section-title">Pilih Game Favoritmu</h2>
+        <div class="games-grid" id="games-grid">
+          <div>
+            <div class="skeleton skeleton-card"></div>
+            <div class="skeleton skeleton-text"></div>
+          </div>
+          <div>
+            <div class="skeleton skeleton-card"></div>
+            <div class="skeleton skeleton-text"></div>
+          </div>
+          <div>
+            <div class="skeleton skeleton-card"></div>
+            <div class="skeleton skeleton-text"></div>
+          </div>
+        </div>
+      </section>
+    </div>
   </main>
 
+  <!-- FOOTER -->
   <footer class="footer">
-    <p>© 2025 WalzShop. Semua Hak Dilindungi.</p>
+    <div class="container">
+      <p>&copy; 2025 Walz Shop. Semua hak dilindungi.</p>
+      <div class="footer-links">
+        <a href="#">Kebijakan Privasi</a>
+        <a href="#">Syarat & Ketentuan</a>
+      </div>
+      <div class="social-media">
+        <a href="#"><i class="fab fa-facebook-f"></i></a>
+        <a href="#"><i class="fab fa-instagram"></i></a>
+        <a href="#"><i class="fab fa-twitter"></i></a>
+      </div>
+    </div>
   </footer>
 
   <script src="script.js"></script>
