--- a/cart.html
+++ b/cart.html
@@ -1,27 +1,106 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Keranjang - WalzShop</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Walz Shop - Keranjang Top Up</title>
   <link rel="stylesheet" href="style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
-  <header class="navbar">
-    <a href="index.html" class="back-btn">⬅ Kembali</a>
-    <h1 class="logo">WalzShop</h1>
+  <header class="header">
+    <div class="container">
+      <a href="index.html" class="logo">
+        <i class="fas fa-gem logo-icon"></i>
+        <span class="logo-text">Walz Shop</span>
+      </a>
+      <nav class="nav">
+        <a href="index.html"><i class="fas fa-home"></i> Beranda</a>
+        <a href="#"><i class="fas fa-info-circle"></i> Tentang</a>
+        <a href="#"><i class="fas fa-headset"></i> Kontak</a>
+      </nav>
+    </div>
   </header>
 
-  <main class="container">
-    <h2>Keranjang Belanja</h2>
-    <div class="cart-items-list"></div>
+  <main class="main">
+    <div class="container">
+      <a href="index.html" class="btn-back"><i class="fas fa-arrow-left"></i> Kembali</a>
 
-    <div class="cart-summary">
-      <button id="cart-checkout-btn">Checkout via WhatsApp</button>
+      <div class="game-banner fade-in">
+        <img id="game-banner" class="game-banner-image skeleton" src="" alt="Game Banner">
+        <div class="game-info">
+          <h1 class="game-name-h1 skeleton-text"></h1>
+          <p class="game-description skeleton-text"></p>
+        </div>
+      </div>
+
+      <div class="form-container">
+        <form id="topup-form">
+          <section class="form-section fade-in">
+            <fieldset>
+              <legend><span class="step-number">1</span> Masukkan User ID & Server</legend>
+              <div class="input-group">
+                <input type="text" id="user-id" placeholder="Contoh: 12345678" required>
+                <input type="text" id="server-id" placeholder="Server ID (Opsional)">
+              </div>
+            </fieldset>
+          </section>
+
+          <section class="form-section fade-in">
+            <fieldset>
+              <legend><span class="step-number">2</span> Pilih Nominal Top Up</legend>
+              <div class="product-grid" id="product-grid">
+                <div class="skeleton skeleton-card"></div>
+                <div class="skeleton skeleton-card"></div>
+              </div>
+            </fieldset>
+          </section>
+
+          <section class="form-section fade-in">
+            <fieldset>
+              <legend><span class="step-number">3</span> Pilih Metode Pembayaran</legend>
+              <div class="payment-grid" id="payment-grid">
+                <div class="skeleton skeleton-card"></div>
+                <div class="skeleton skeleton-card"></div>
+              </div>
+            </fieldset>
+          </section>
+
+          <section class="form-section fade-in">
+            <fieldset>
+              <legend><span class="step-number">4</span> Ringkasan Pembayaran</legend>
+              <div class="summary-card">
+                <table class="summary-table">
+                  <tr><td>Produk</td><td id="summary-product">-</td></tr>
+                  <tr><td>Metode Bayar</td><td id="summary-payment">-</td></tr>
+                </table>
+                <div class="summary-total">
+                  <span>Total Pembayaran</span>
+                  <span id="summary-total">Rp 0</span>
+                </div>
+              </div>
+            </fieldset>
+          </section>
+
+          <button type="button" id="checkout-btn" class="btn btn-block btn-confirm" disabled>Beli Sekarang</button>
+        </form>
+      </div>
     </div>
   </main>
 
-  <div id="toast-container"></div>
+  <footer class="footer">
+    <div class="container">
+      <p>&copy; 2025 Walz Shop. Semua hak dilindungi.</p>
+    </div>
+  </footer>
+
+  <div id="modal-overlay" class="modal-overlay">
+    <div id="checkout-modal" class="modal"></div>
+    <div id="promo-list-modal" class="modal"></div>
+    <div id="error-modal" class="modal"></div>
+  </div>
+
   <script src="script.js"></script>
 </body>
 </html>
