--- a/game.html
+++ b/game.html
@@ -8,8 +8,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
-<body>
-  <!-- HEADER -->
+<body data-page="game">
   <header class="header">
     <div class="container">
       <a href="index.html" class="logo">
@@ -17,55 +16,81 @@
         <span class="logo-text">Walz Shop</span>
       </a>
       <nav class="nav">
-        <a href="index.html"><i class="fas fa-home"></i> Beranda</a>
-        <a href="#"><i class="fas fa-info-circle"></i> Tentang</a>
-        <a href="#"><i class="fas fa-headset"></i> Kontak</a>
+        <a href="index.html" class="nav-item"><i class="fas fa-home"></i> Beranda</a>
+        <a href="#" class="nav-item active"><i class="fas fa-info-circle"></i> Tentang</a>
+        <a href="#" class="nav-item"><i class="fas fa-headset"></i> Kontak</a>
       </nav>
+      <button class="nav-toggle">
+        <i class="fas fa-bars"></i>
+      </button>
     </div>
   </header>
 
-  <!-- MAIN -->
   <main class="main">
     <div class="container">
       <a href="index.html" class="btn-back"><i class="fas fa-arrow-left"></i> Kembali</a>
       <div class="game-banner fade-in">
         <img id="game-banner" class="game-banner-image" src="" alt="Game Banner">
-        <h1 class="game-name-h1"></h1>
+        <h1 class="game-name-h1" id="game-title"></h1>
       </div>
 
       <div class="form-container">
-        <form id="topup-form">
-          <div class="form-group">
-            <label for="user-id"><i class="fas fa-user"></i> Masukkan User ID</label>
-            <div class="input-group">
-              <input type="text" id="user-id" placeholder="Contoh: 12345678" required>
-              <input type="text" id="server-id" placeholder="Server ID (Opsional)">
-            </div>
+        <div class="form-group">
+          <label for="user-id"><i class="fas fa-user"></i> Masukkan User ID</label>
+          <div class="input-group">
+            <input type="text" id="user-id" placeholder="Contoh: 12345678" required>
+            <input type="text" id="server-id" placeholder="Server ID (Opsional)">
           </div>
+          <small class="error-text" id="error-user"></small>
+        </div>
 
-          <div class="form-group">
-            <label><i class="fas fa-dollar-sign"></i> Pilih Nominal Top Up</label>
-            <div class="product-grid" id="product-grid"></div>
+        <div class="form-group">
+          <label><i class="fas fa-dollar-sign"></i> Pilih Nominal Top Up</label>
+          <div class="product-grid" id="product-grid"></div>
+          <small class="error-text" id="error-product"></small>
+        </div>
+
+        <div class="form-group">
+          <label><i class="fas fa-credit-card"></i> Pilih Metode Pembayaran</label>
+          <div class="payment-grid" id="payment-grid"></div>
+          <small class="error-text" id="error-payment"></small>
+        </div>
+        
+        <div class="form-group">
+          <label><i class="fas fa-tags"></i> Gunakan Voucher</label>
+          <div class="input-group voucher-input-group">
+            <input type="text" id="voucher-input" placeholder="Kode Voucher">
+            <button type="button" class="btn btn-apply" id="voucher-btn">Terapkan</button>
           </div>
+          <small class="status-text" id="voucher-status"></small>
+        </div>
 
-          <div class="form-group">
-            <label><i class="fas fa-credit-card"></i> Pilih Metode Pembayaran</label>
-            <div class="payment-grid" id="payment-grid"></div>
+        <div class="summary-box">
+          <div class="summary-item">
+            <span>Harga Produk</span>
+            <span id="summary-product-price">-</span>
           </div>
+          <div class="summary-item" id="summary-voucher-row" style="display:none">
+            <span>Diskon Voucher</span>
+            <span id="summary-voucher-price">-</span>
+          </div>
+          <div class="summary-item total-price">
+            <span>Total Pembayaran</span>
+            <span id="total-price">-</span>
+          </div>
+        </div>
 
-          <button type="button" id="checkout-btn" class="btn btn-block btn-confirm" disabled>Lanjut ke Keranjang</button>
-        </form>
+        <button type="button" id="checkout-btn" class="btn btn-block btn-confirm" disabled>Lanjut ke Keranjang</button>
       </div>
     </div>
   </main>
 
-  <!-- FOOTER -->
   <footer class="footer">
     <div class="container">
       <p>&copy; 2025 Walz Shop. Semua hak dilindungi.</p>
     </div>
   </footer>
-
+  
   <script src="script.js"></script>
 </body>
 </html>
