--- a/cart.html
+++ b/cart.html
@@ -8,8 +8,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
-<body>
-  <!-- HEADER -->
+<body data-page="cart">
   <header class="header">
     <div class="container">
       <a href="index.html" class="logo">
@@ -17,14 +16,16 @@
         <span class="logo-text">Walz Shop</span>
       </a>
       <nav class="nav">
-        <a href="index.html"><i class="fas fa-home"></i> Beranda</a>
-        <a href="#"><i class="fas fa-info-circle"></i> Tentang</a>
-        <a href="#"><i class="fas fa-headset"></i> Kontak</a>
+        <a href="index.html" class="nav-item"><i class="fas fa-home"></i> Beranda</a>
+        <a href="#" class="nav-item"><i class="fas fa-info-circle"></i> Tentang</a>
+        <a href="#" class="nav-item"><i class="fas fa-headset"></i> Kontak</a>
       </nav>
+      <button class="nav-toggle">
+        <i class="fas fa-bars"></i>
+      </button>
     </div>
   </header>
 
-  <!-- MAIN -->
   <main class="main">
     <div class="container">
       <a href="game.html" class="btn-back"><i class="fas fa-arrow-left"></i> Kembali</a>
@@ -34,10 +35,12 @@
         <table class="summary-table">
           <tr><td>Game</td><td id="summary-game">-</td></tr>
           <tr><td>User ID</td><td id="summary-user">-</td></tr>
-          <tr><td>Server</td><td id="summary-server">-</td></tr>
+          <tr id="server-row" style="display:none;"><td>Server</td><td id="summary-server">-</td></tr>
           <tr><td>Produk</td><td id="summary-product">-</td></tr>
+          <tr id="voucher-row" style="display:none;"><td>Diskon Voucher</td><td id="summary-voucher">-</td></tr>
           <tr><td>Metode Bayar</td><td id="summary-payment">-</td></tr>
         </table>
+        <div class="soft-divider"></div>
         <div class="summary-total">
           <span>Total Pembayaran</span>
           <span id="summary-total">Rp 0</span>
@@ -49,7 +52,6 @@
     </div>
   </main>
 
-  <!-- FOOTER -->
   <footer class="footer">
     <div class="container">
       <p>&copy; 2025 Walz Shop. Semua hak dilindungi.</p>
